--- a/css/styles.css
+++ b/css/styles.css
@@ -632,7 +632,7 @@ img {
   position: absolute;
   top: 25%;
   left: 16px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:focus + .modal-icon {
   fill: var(--accent-color);
